--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@types/dateformat": "^5.0.0",
     "@types/jest": "^27.0.3",
     "@types/node": "^16.11.11",
     "@types/react": "^17.0.37",
@@ -19,6 +20,7 @@
     "@types/react-router-dom": "^5.3.2",
     "@types/redux-persist": "^4.3.1",
     "bootstrap": "^4.6.0",
+    "dateformat": "^5.0.2",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
     "react-calendar": "^3.5.0",
