--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "redux-persist": "^6.0.0",
     "redux-persist-transform-encrypt": "^3.0.1",
     "redux-thunk": "^2.4.1",
+    "socket.io-client": "^4.4.0",
     "typescript": "^4.5.2",
     "web-vitals": "^1.1.2"
   },
