--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/node": "^16.11.11",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
+    "@types/react-outside-click-handler": "^1.3.0",
     "@types/react-router-dom": "^5.3.2",
     "@types/redux-persist": "^4.3.1",
     "bootstrap": "^4.6.0",
@@ -27,6 +28,7 @@
     "react-calendar": "^3.5.0",
     "react-dom": "^17.0.2",
     "react-google-button": "^0.7.2",
+    "react-outside-click-handler": "^1.3.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
