--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react-router-dom": "^5.3.2",
     "@types/redux-persist": "^4.3.1",
     "bootstrap": "^4.6.0",
+    "date-fns": "^2.27.0",
     "dateformat": "^5.0.2",
     "emoji-picker-react": "^3.4.8",
     "react": "^17.0.2",
