--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/jest": "^27.0.3",
     "@types/node": "^16.11.11",
     "@types/react": "^17.0.37",
+    "@types/react-calendar": "^3.4.3",
     "@types/react-dom": "^17.0.11",
     "@types/react-outside-click-handler": "^1.3.0",
     "@types/react-router-dom": "^5.3.2",
