--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^12.8.3",
     "@types/dateformat": "^5.0.0",
     "@types/jest": "^27.0.3",
+    "@types/leaflet": "^1.7.6",
     "@types/node": "^16.11.11",
     "@types/react": "^17.0.37",
     "@types/react-calendar": "^3.4.3",
@@ -25,11 +26,13 @@
     "date-fns": "^2.27.0",
     "dateformat": "^5.0.2",
     "emoji-picker-react": "^3.4.8",
+    "leaflet": "^1.7.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
     "react-calendar": "^3.5.0",
     "react-dom": "^17.0.2",
     "react-google-button": "^0.7.2",
+    "react-leaflet": "^3.2.2",
     "react-outside-click-handler": "^1.3.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
@@ -54,16 +57,9 @@
       "react-app/jest"
     ]
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not op_mini all"
+  ]
 }
